# temp-hello-2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build-itk-debug.bat
common/: c_global.h
common/ccxx/: configuration.h  cxarguments.cpp  cxarguments.h  cxassert.cpp  cxassert.h  cxbuffer.cpp  cxbuffer.h  cxcontainer.h  cxcrc.cpp  cxcrc.h  cxcrc_endian.cpp  cxencoding.cpp  cxencoding.h  cxfilesystem.cpp  cxfilesystem.h  cxfilesystem_test.cpp  cxglobal.h  cxmath.cpp  cxmath.h  cxpacket.h  cxprocess.cpp  cxprocess.h  cxprocmutex.cpp  cxprocmutex.h  cxsharememory.cpp  cxsharememory.h  cxsocket.cpp  cxsocket.h  cxsqlite3template.hpp  cxstring.cpp  cxstring.h  cxstring_bench.cpp  cxstring_test.cpp  cxstringc.cpp  cxstringc.h  cxsystem.cpp  cxsystem.h  cxthread.cpp  cxthread.h  cxtinyxml.cpp  (+8 more)
common/docking/: DockAreaWidget.cpp  DockComponentsFactory.cpp  DockFocusController.cpp  DockManager.cpp  DockWidget.cpp  DockWidgetTab.cpp  FloatingDragPreview.cpp
common/helpers/: filesystem_helper.cpp  filesystem_helper.h  itk_helper.cpp  itk_helper.h  log_helper.cpp  log_helper.h  opencv_helper.cpp  opencv_helper.h  qt_helper.cpp  qt_helper.h  vtk_helper.cpp  vtk_helper.h  yaml_helper.cpp  yaml_helper.h
common/vtkAddon/: vtkAddonExport.h
common/vtkITK/: GrowCutExport.h  GrowCutExport.h.in  itkMorphologicalContourInterpolator.h  itkMorphologicalContourInterpolator.hxx  vtkITK.h  vtkITKExport.h  vtkITKImageSequenceReader.cxx  vtkITKImageSequenceReader.h  vtkITKImageSequenceWriter.cxx  (+3 more)
cyg/doc/: 功能清单.csv  (+7 more)
gtest/: CMakeLists.txt
man/: CopyVcpkgFiles.py
(+415 files in other folders)
